LibGUI: Add CommonMenus
Right now only the accessibility menu is shared across apps but
it's a good bit of boilerplate that can be consolidated and will
make adding ColorBlindnessFilters to other widgets trivial.

--- a/Userland/Libraries/LibGUI/CMakeLists.txt
+++ b/Userland/Libraries/LibGUI/CMakeLists.txt
@@ -29,6 +29,7 @@ set(SOURCES
     CommandPalette.cpp
     CommonActions.cpp
     CommonLocationsProvider.cpp
+    CommonMenus.cpp
     ConnectionToWindowManagerServer.cpp
     ConnectionToWindowServer.cpp
     Desktop.cpp
