LibVideo: Add VideoFrame class for decoded video frames
The class is virtual and has one subclass, SubsampledYUVFrame, which
is used by the VP9 decoder to return a single frame. The
output_to_bitmap(Bitmap&) function can be used to set pixels on an
existing bitmap of the correct size to the RGB values that
should be displayed. The to_bitmap() function will allocate a new bitmap
and fill it using output_to_bitmap.

This new class also implements bilinear scaling of the subsampled U and
V planes so that subsampled videos' colors will appear smoother.

--- a/Userland/Libraries/LibVideo/CMakeLists.txt
+++ b/Userland/Libraries/LibVideo/CMakeLists.txt
@@ -3,6 +3,7 @@ set(SOURCES
     Color/ColorPrimaries.cpp
     Color/TransferCharacteristics.cpp
     MatroskaReader.cpp
+    VideoFrame.cpp
     VP9/BitStream.cpp
     VP9/Decoder.cpp
     VP9/Parser.cpp
