VideoPlayer: Start fleshing out the user interface
This adds player widget with working play/pause controls, a seek bar
which currently only displays the current playback position, and a
button to cycle between the scaling modes.

The player uses the new PlaybackManager class to handle demuxing,
decoding, and frame presentation timing.

Currently, the volume control is non-functional.

--- a/Userland/Applications/VideoPlayer/CMakeLists.txt
+++ b/Userland/Applications/VideoPlayer/CMakeLists.txt
@@ -6,6 +6,8 @@ serenity_component(
 
 set(SOURCES
     main.cpp
+    VideoFrameWidget.cpp
+    VideoPlayerWidget.cpp
 )
 
 serenity_bin(VideoPlayer)
