LibWeb: Implement 'Strip url for use as a referrer' AO

--- a/Userland/Libraries/LibWeb/CMakeLists.txt
+++ b/Userland/Libraries/LibWeb/CMakeLists.txt
@@ -377,6 +377,7 @@ set(SOURCES
     Platform/ImageCodecPlugin.cpp
     Platform/Timer.cpp
     Platform/TimerSerenity.cpp
+    ReferrerPolicy/AbstractOperations.cpp
     RequestIdleCallback/IdleDeadline.cpp
     ResizeObserver/ResizeObserver.cpp
     SecureContexts/AbstractOperations.cpp
