Everywhere: Explicitly link all binaries against the LibC target
Even though the toolchain implicitly links against -lc, it does not know
where it should get LibC from except for the sysroot. In the case of
Clang this causes it to pick up the LibC stub instead, which might be
slightly outdated and feature missing symbols.

This is currently not an issue that manifests because we pass through
the dependency on LibC and other libraries by accident, which causes
CMake to link against the LibC target (instead of just the library),
and thus points the linker at the build output directory.

Since we are looking to fix that in the upcoming commits, let's make
sure that everything will still be able to find the proper LibC first.

--- a/Tests/Kernel/CMakeLists.txt
+++ b/Tests/Kernel/CMakeLists.txt
@@ -26,6 +26,7 @@ foreach(source IN LISTS TEST_SOURCES)
     get_filename_component(test_name "${source}" NAME_WE)
     add_executable("${test_name}" "${source}")
     target_link_libraries("${test_name}" LibCore)
+    serenity_set_implicit_links("${test_name}")
     install(TARGETS "${test_name}" RUNTIME DESTINATION usr/Tests/Kernel/Legacy)
 endforeach()
 
