--- a/Userland/Libraries/LibCards/CMakeLists.txt
+++ b/Userland/Libraries/LibCards/CMakeLists.txt
@@ -6,4 +6,4 @@ set(SOURCES
 )
 
 serenity_lib(LibCards cards)
-target_link_libraries(LibCards LibC LibCore LibConfig LibGUI)
+target_link_libraries(LibCards LibCore LibConfig LibGUI)
