--- a/Userland/Libraries/LibCodeComprehension/Shell/CMakeLists.txt
+++ b/Userland/Libraries/LibCodeComprehension/Shell/CMakeLists.txt
@@ -3,4 +3,4 @@ set(SOURCES
 )
 
 serenity_lib(LibShellComprehension shellcomprehension)
-target_link_libraries(LibShellComprehension LibCodeComprehension LibC)
+target_link_libraries(LibShellComprehension LibCodeComprehension)
