--- a/Userland/Utilities/CMakeLists.txt
+++ b/Userland/Utilities/CMakeLists.txt
@@ -41,12 +41,14 @@ foreach(CMD_SRC ${CMD_SOURCES})
     if (CMD_NAME IN_LIST SPECIAL_TARGETS)
         add_executable(${TARGET_NAME} ${CMD_SRC})
         target_link_libraries(${TARGET_NAME} LibCore LibMain)
+        serenity_set_implicit_links(${TARGET_NAME})
         install(TARGETS ${TARGET_NAME} RUNTIME DESTINATION bin)
         install(CODE "file(RENAME ${CMAKE_INSTALL_PREFIX}/bin/${CMD_NAME}-bin ${CMAKE_INSTALL_PREFIX}/bin/${CMD_NAME})")
     else()
         add_executable(${CMD_NAME} ${CMD_SRC})
         set_target_properties(${CMD_NAME} PROPERTIES EXCLUDE_FROM_ALL TRUE)
         target_link_libraries(${CMD_NAME} LibCore)
+        serenity_set_implicit_links(${TARGET_NAME})
         install(TARGETS ${CMD_NAME} RUNTIME DESTINATION bin OPTIONAL)
     endif()
 endforeach()
