--- a/Tests/LibJS/CMakeLists.txt
+++ b/Tests/LibJS/CMakeLists.txt
@@ -18,6 +18,7 @@ serenity_component(
 )
 add_executable(test262-runner test262-runner.cpp)
 target_link_libraries(test262-runner LibJS LibCore)
+serenity_set_implicit_links(test262-runner)
 link_with_locale_data(test262-runner)
 install(TARGETS test262-runner RUNTIME DESTINATION bin OPTIONAL)
 
@@ -27,4 +28,5 @@ serenity_component(
 )
 add_executable(test-test262 test-test262.cpp)
 target_link_libraries(test-test262 LibMain LibCore)
+serenity_set_implicit_links(test-test262)
 install(TARGETS test-test262 RUNTIME DESTINATION bin OPTIONAL)
