--- a/Tests/UserspaceEmulator/CMakeLists.txt
+++ b/Tests/UserspaceEmulator/CMakeLists.txt
@@ -8,5 +8,6 @@ foreach(source IN LISTS TEST_SOURCES)
     get_filename_component(test_name "${source}" NAME_WE)
     add_executable("${test_name}" "${source}")
     target_link_libraries("${test_name}" LibCore)
+    serenity_set_implicit_links("${test_name}")
     install(TARGETS "${test_name}" RUNTIME DESTINATION usr/Tests/UserEmulator)
 endforeach()
