--- a/Userland/Libraries/LibDeviceTree/CMakeLists.txt
+++ b/Userland/Libraries/LibDeviceTree/CMakeLists.txt
@@ -4,4 +4,4 @@ set(SOURCES
 )
 
 serenity_lib(LibDeviceTree DeviceTree)
-target_link_libraries(LibDeviceTree LibC LibCore)
+target_link_libraries(LibDeviceTree LibCore)
