LibCrypt: Define it as a normal library
LibCrypt has no need for being -nostdlib, especially since we just link
in LibC manually anyways.

--- a/Userland/Libraries/LibCrypt/CMakeLists.txt
+++ b/Userland/Libraries/LibCrypt/CMakeLists.txt
@@ -10,5 +10,5 @@ set(SOURCES
     crypt.cpp
 )
 
-serenity_libc(LibCrypt crypt)
+serenity_lib(LibCrypt crypt)
 target_link_libraries(LibCrypt LibC LibCryptSHA2)
