AK+Meta: Add WEB_FETCH_DEBUG macro

--- a/AK/Debug.h.in
+++ b/AK/Debug.h.in
@@ -506,6 +506,10 @@
 #cmakedefine01 WEBSERVER_DEBUG
 #endif
 
+#ifndef WEB_FETCH_DEBUG
+#cmakedefine01 WEB_FETCH_DEBUG
+#endif
+
 #ifndef WEB_WORKER_DEBUG
 #cmakedefine01 WEB_WORKER_DEBUG
 #endif
