AK: Add framework for a unified floating point to string conversion
Currently, the floating point to string conversion is implemented
several times across the codebase. This commit provides a pretty
low-level function to unify all of such conversions. It converts the
given double to a fixed point decimal satisfying a few correctness
criteria.

--- a/AK/CMakeLists.txt
+++ b/AK/CMakeLists.txt
@@ -16,6 +16,7 @@ set(AK_SOURCES
     StackInfo.cpp
     String.cpp
     StringBuilder.cpp
+    StringFloatingPointConversions.cpp
     StringImpl.cpp
     StringUtils.cpp
     StringView.cpp
