Utilities: Add nologin application
This adds the `nologin` application to the system. This application
will look for `/etc/nologin`. If it is present, it will display the
message in the file. Otherwise, it will display an error about the
current account being unavailable.

--- a/Userland/Utilities/CMakeLists.txt
+++ b/Userland/Utilities/CMakeLists.txt
@@ -165,6 +165,7 @@ target_link_libraries(mount LibMain)
 target_link_libraries(nc LibMain)
 target_link_libraries(netstat LibMain)
 target_link_libraries(nl LibMain)
+target_link_libraries(nologin LibMain)
 target_link_libraries(notify LibGUI LibMain)
 target_link_libraries(nproc LibMain)
 target_link_libraries(ntpquery LibMain)
