--- a/.github/workflows/libjs-test262.yml
+++ b/.github/workflows/libjs-test262.yml
@@ -57,7 +57,9 @@ jobs:
           )
 
       - name: Setup Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
 
       - name: Install Python dependencies
         # The setup-python action set default python to python3.x. Note that we are not using system python here.
