Flood: Link against all required libraries privately
Should have asked for a rebase on that PR due to the library linking
refactor!

--- a/Userland/Games/Flood/CMakeLists.txt
+++ b/Userland/Games/Flood/CMakeLists.txt
@@ -20,4 +20,4 @@ set(GENERATED_SOURCES
 )
 
 serenity_app(Flood ICON app-flood)
-target_link_libraries(Flood LibConfig LibGUI LibMain LibDesktop)
+target_link_libraries(Flood PRIVATE LibConfig LibCore LibDesktop LibGfx LibGUI LibMain)
