Base+VideoPlayer: Add an icon for video player
Co-authored-by: TreuKS <ks2225@protonmail.com>

--- a/Userland/Applications/VideoPlayer/CMakeLists.txt
+++ b/Userland/Applications/VideoPlayer/CMakeLists.txt
@@ -10,5 +10,5 @@ set(SOURCES
     VideoPlayerWidget.cpp
 )
 
-serenity_bin(VideoPlayer)
+serenity_app(VideoPlayer ICON app-video-player)
 target_link_libraries(VideoPlayer PRIVATE LibVideo LibAudio LibCore LibGfx LibGUI LibMain)
