Browser+LibWebView+WebDriver: Connect WebDriver to WebContent
First, this moves the WebDriver socket to the /tmp/websocket/ directory,
as WebDriver now creates multiple sockets per session. Those sockets are
now created with Core::LocalServer rather than manually setting up the
listening sockets (this was an existing FIXME which resolved some issues
I was hitting with creating a second listening socket).

WebDriver passes both socket paths to Browser via command line. Browser
continues to connect itself via one socket path, then forwards the other
socket path to the WebContent process created by the OOPWV. WebContent
then connects to WebDriver over this path.

WebContent will temporarily set the navigator.webdriver flag to true
after connecting to WebDriver. This will soon be moved to its own IPC to
be sent by WebDriver.

--- a/Userland/Services/WebDriver/CMakeLists.txt
+++ b/Userland/Services/WebDriver/CMakeLists.txt
@@ -1,6 +1,7 @@
 serenity_component(
     WebDriver
     TARGETS WebDriver
+    DEPENDS WebContent
 )
 
 set(SOURCES
@@ -8,12 +9,15 @@ set(SOURCES
     Client.cpp
     Session.cpp
     TimeoutsConfiguration.cpp
+    WebContentConnection.cpp
     main.cpp
 )
 
 set(GENERATED_SOURCES
     ../../Applications/Browser/WebDriverSessionClientEndpoint.h
     ../../Applications/Browser/WebDriverSessionServerEndpoint.h
+    ../../Services/WebContent/WebDriverClientEndpoint.h
+    ../../Services/WebContent/WebDriverServerEndpoint.h
 )
 
 serenity_bin(WebDriver)
