LibWeb+WebDriver: Move the timeouts configuration object to LibWeb

--- a/Userland/Libraries/LibWeb/CMakeLists.txt
+++ b/Userland/Libraries/LibWeb/CMakeLists.txt
@@ -443,6 +443,7 @@ set(SOURCES
     WebDriver/ExecuteScript.cpp
     WebDriver/Response.cpp
     WebDriver/Screenshot.cpp
+    WebDriver/TimeoutsConfiguration.cpp
     WebGL/WebGLContextAttributes.cpp
     WebGL/WebGLContextEvent.cpp
     WebGL/WebGLRenderingContext.cpp
