Piano: Show a progress window when exporting WAV
This exposes that the export is pretty slow, but it's much nicer than
having the GUI lock up for 20s :^)

--- a/Userland/Applications/Piano/CMakeLists.txt
+++ b/Userland/Applications/Piano/CMakeLists.txt
@@ -5,8 +5,11 @@ serenity_component(
     DEPENDS AudioServer
 )
 
+compile_gml(ExportProgressWidget.gml ExportProgressWidget.h export_progress_widget)
+
 set(SOURCES
     AudioPlayerLoop.cpp
+    ExportProgressWindow.cpp
     KeysWidget.cpp
     KnobsWidget.cpp
     main.cpp
@@ -18,6 +21,10 @@ set(SOURCES
     WaveWidget.cpp
     ProcessorParameterWidget/ParameterWidget.cpp
     ProcessorParameterWidget/Slider.cpp
+)
+
+set(GENERATED_SOURCES
+    ExportProgressWidget.h
 )
 
 serenity_app(Piano ICON app-piano)
