LibGL: Refactor TextureNameAllocator to a more general NameAllocator
This functionality can also be used for other types of objects.

--- a/Userland/Libraries/LibGL/CMakeLists.txt
+++ b/Userland/Libraries/LibGL/CMakeLists.txt
@@ -8,8 +8,8 @@ set(SOURCES
     Lighting.cpp
     List.cpp
     Matrix.cpp
+    NameAllocator.cpp
     Stencil.cpp
-    Tex/NameAllocator.cpp
     Tex/Texture2D.cpp
     Texture.cpp
     Vertex.cpp
